# SFCW-Simulator

./: .gitmodules  README.md
Cpp/: CMakeLists.txt  SimpleSimulator.cpp  main.cpp
Cpp/inc/: Component.h  Plotting.h  Processor.h  Simulator.h  SimulatorControl.h  Synthesiser.h  Target.h  Types.h
Cpp/src/: Component.cpp  Plotting.cpp  Processor.cpp  Simulator.cpp  Synthesiser.cpp  Target.cpp  Types.cpp
